<resources>
    <string name="app_name">Artist World</string>

    <string name="testing_text">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</string>

    <string name="search_hint">Search by title</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_create_account">Create Account</string>
    <string name="favorite">My favorites</string>
    <string name="policy">Private Policy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!--favorite view-->
    <string name="fav_project_title">Project Title</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--authentication form-->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!--Values in SharedPreferences file-->
    <string name="user_id_key" translatable="false">user_id</string>
    <string name="token_key" translatable="false">token</string>
    <string name="preference_name" translatable="false">preference</string>

    <!--widget-->
    <string name="appwidget_text">Vote on ideas to keep track here</string>
    <string name="add_widget">Add widget</string>
    <string name="artist_world_logo_descr">Artist world logo</string>
    <string name="amount_of_votes_descr">Amount of votes</string>
    <string name="total_of_percent_descr">Total of percent</string>
    <string name="project_main_image_def_descr">Project main image</string>
    <string name="navigation_menu_background_descr">Navigation menu Background</string>
    <string name="profile_img_descr">Profile image</string>
    <string name="drawer_nav_other_txt">Other</string>
    <string name="vote_weight_txt">Vote weight</string>
    <string name="fab_descr">Vote for this idea</string>

    <!--java strings-->
    <string name="unauthenticated">Unauthenticated</string>
    <string name="client_error">"Client Error "</string>
    <string name="logged_in">"You are logged in"</string>
    <string name="error">"Sorry, an error happened."</string>
    <string name="added_fav">"Added to favorites"</string>
    <string name="failed_fav" translatable="false">"Failed to insert in favorite idea "</string>
    <string name="success">"Success"</string>
    <string name="need_login">"You need to be logged in"</string>
    <string name="submit">"Submit"</string>
    <string name="cancel">"Cancel"</string>
    <string name="one_star">"Very Bad"</string>
    <string name="two_star">"Not good"</string>
    <string name="three_star">"Quite ok"</string>
    <string name="four_star">"Very Good"</string>
    <string name="five_star">"Excellent !!!"</string>
    <string name="dialog_title">"Rate this project"</string>
    <string name="dialog_descr">"Please select some stars and give your feedback"</string>
    <string name="dialog_hint">"Please write your comment here ..."</string>
    <string name="all_fields_required">"All fields are required"</string>
</resources>

