<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/action_login" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_login"
            android:title="@string/action_logout" />
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_create_account"
            android:title="@string/action_create_account" />
    </group>

    <item android:title="@string/drawer_nav_other_txt">
        <menu>
            <item
                android:id="@+id/nav_favorite"
                android:title="@string/favorite" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/policy" />
        </menu>
    </item>
</menu>