<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="some title">

            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_slide_height"
                android:nextFocusUp="@id/toolbar"
                custom:auto_cycle="true"
                custom:indicator_visibility="visible"
                custom:pager_animation="Accordion"
                custom:pager_animation_span="1100" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:focusable="true"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/scrolling_content_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/detail_dash_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/card_title_c"
                    android:textSize="@dimen/idea_card_title_size"
                    tools:text="Title goes here" />

                <TextView
                    android:id="@+id/detail_dash_by"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_dash_title"
                    android:paddingBottom="@dimen/idea_card_title_bottom_left_right_padding"
                    android:paddingEnd="@dimen/idea_card_title_bottom_left_right_padding"
                    android:paddingStart="0dp"
                    android:paddingTop="@dimen/idea_card_by_padding_top"
                    android:textSize="@dimen/idea_card_by"
                    tools:text="by: yggarcia" />

                <RelativeLayout
                    android:id="@+id/detail_vote_given_cont"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:visibility="invisible">

                    <ImageView
                        android:id="@+id/fav_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/amount_of_votes_descr"
                        android:src="@drawable/ic_fav_heart" />

                    <TextView
                        android:id="@+id/detail_vote_weight_tv"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="6dp"
                        android:layout_marginTop="5dp"
                        android:layout_toStartOf="@id/fav_one"
                        android:textColor="@android:color/primary_text_light"
                        tools:text="5" />

                </RelativeLayout>


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/progress_bar_cont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/detail_prog_bar"
                    style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    tools:progress="50" />

                <ImageView
                    android:id="@+id/thumb_ic_img"
                    android:layout_width="@dimen/thumb_size"
                    android:layout_height="@dimen/thumb_size"
                    android:layout_below="@+id/detail_prog_bar"
                    android:contentDescription="@string/total_of_percent_descr"
                    android:src="@drawable/ic_thumb_up" />

                <TextView
                    android:id="@+id/detail_percent_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/detail_prog_bar"
                    tools:text="50%" />

            </RelativeLayout>

            <TextView
                android:id="@+id/idea_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/scrolling_content_descp_marg_top"
                android:lineSpacingExtra="@dimen/body_txt_line_space"
                android:text="@string/testing_text"
                android:textSize="@dimen/body_txt_s" />

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_fab_wht"
        app:backgroundTint="@color/colorAccent"
        app:borderWidth="0dp"
        app:elevation="@dimen/fab_elevation"
        android:contentDescription="@string/fab_descr"/>

</android.support.design.widget.CoordinatorLayout>

